--- a/wp-content/themes/schlemmer/css/scss/style.scss
+++ b/wp-content/themes/schlemmer/css/scss/style.scss
@@ -11,6 +11,7 @@
 				"global",
 				"header",
 				"nav",
+				"get-started-overlay",
 				"home-sections/section-one",
 				"home-sections/section-two",
 				"home-sections/section-three",
