--- a/wp-content/themes/schlemmer/css/scss/_get-started-overlay.scss
+++ b/wp-content/themes/schlemmer/css/scss/_get-started-overlay.scss
@@ -133,3 +133,19 @@
 		}
 	}
 }
+
+
+
+@media screen and (max-width:1060px) {
+	
+	
+	.sticky_get_started_tab_wrapper {
+		display: none;
+	}
+	
+	
+	
+	
+} /* Media Query */
+
+
