--- a/wp-content/themes/schlemmer/css/scss/style.scss
+++ b/wp-content/themes/schlemmer/css/scss/style.scss
@@ -10,6 +10,7 @@
 				"reset",
 				"global",
 				"header",
+				"second-sticky-menu",
 				"nav",
 				"get-started-overlay",
 				"home-sections/section-one",
