--- a/wp-content/themes/schlemmer/css/scss/_get-started-overlay.scss
+++ b/wp-content/themes/schlemmer/css/scss/_get-started-overlay.scss
@@ -149,3 +149,16 @@
 } /* Media Query */
 
 
+@media screen and (max-width: 767px) {
+	
+	
+	.sticky_overlay_close {
+  	top: 27px;
+		right: 17px;
+	}
+
+	
+	
+} /* Media Query */
+
+
