--- a/wp-content/themes/schlemmer/css/scss/_page-about.scss
+++ b/wp-content/themes/schlemmer/css/scss/_page-about.scss
@@ -22,6 +22,8 @@ body.page-template-page-about {
 		font-family:$questrabold;
 		color:$bluelight;
 		margin-left:8%;
+		font-weight:300;
+		font-style: normal;
 	}
 	span.small_header {
 		color:$bluedark;
