--- a/wp-content/themes/schlemmer/css/scss/_page-practiceareas.scss
+++ b/wp-content/themes/schlemmer/css/scss/_page-practiceareas.scss
@@ -26,7 +26,9 @@ body.page-template-page-practiceareas {
 		font-family: $gothicdemicondensed;
 		letter-spacing: 25px;
 		display: block;
-		margin-bottom:170px
+		margin-bottom:170px;
+		font-weight:300;
+		font-style:normal;
 	}
 	ul#menu-practice-areas {
 		list-style: none;
