--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-five.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-five.scss
@@ -1,13 +1,13 @@
 #section_five {
 	width:100%;
 	background: url(#{$themePath}images/wavy_line_patterns.jpg) top left repeat;
-	padding-bottom: 240px;
+	padding-bottom: 140px;
 	overflow: hidden;
 }
 
 
 .section_five_inner {
-	max-width: 1820px;
+	max-width: 1840px;
 	margin:0 auto;
 	padding:228px 0 0;
 	width:100%;
@@ -25,11 +25,11 @@
 
 .section_five_content {
 	// font-family: $gothicbook;
-	margin:57px auto 0;
+	margin: 77px auto 0;;
 	line-height: 31px;
 	// font-size: 18px;
 	color:$bluedark;
-	max-width: 840px;
+	max-width: 899px;
 	
 }
 
@@ -168,7 +168,7 @@
 	
 	
 	#section_five {
-		padding-bottom: 99px;
+		padding-bottom: 74px;
 	}
 	
 	
@@ -245,7 +245,7 @@
 	
 	
 	#section_five {
-		padding: 0px 20px 85px;
+		padding: 0px 20px 60px;
 	}
 	
 	
