--- a/wp-content/themes/schlemmer/css/scss/_page-blog.scss
+++ b/wp-content/themes/schlemmer/css/scss/_page-blog.scss
@@ -63,6 +63,8 @@ body.single, body.archive {
 		h1 {
 			font-size: 60px;
 			line-height: 70px; 
+			font-weight:300;
+			font-style:normal;
 		}
 	}
 }
@@ -70,7 +72,9 @@ body.single, body.archive {
 body.single {
 	.blog_content_wrapper.content {
 		h1 {
-			margin-bottom:54px; 
+			margin-bottom:54px;
+			font-weight:300;
+			font-style:normal; 
 		}
 	}
 }
@@ -84,6 +88,8 @@ body.single {
 		font-size:80px;
 		padding-bottom: 49px;
 		margin-bottom: 33px;
+		font-weight:300;
+		font-style:normal;
 	}
 	.single_post {
 		border-bottom:1px solid #9e9e9e;
@@ -292,6 +298,9 @@ body.single {
 			padding-bottom: 10px;
 			
 		}
+		a.read_more_button {
+			margin: 34px 0px 40px;
+		}
 	}
 	
 	.sidebar.blog span.sidebar_title {
@@ -308,6 +317,8 @@ body.single {
 		margin-bottom: 20px;
 		margin-top: 18px;
 	}
+	
+	
 	
 		
 	
