--- a/wp-content/themes/schlemmer/css/scss/_page-default.scss
+++ b/wp-content/themes/schlemmer/css/scss/_page-default.scss
@@ -1,11 +1,17 @@
+#randomizer {
+	background:top center  no-repeat;
+	background-size:cover;
+}
+
+
+
 .banner {
 	width:100%;
 	height:300px;
-	background: red;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: url(#{$themePath}images/int_header_3.jpg) top center  no-repeat;
+	
 	background-size: cover;
 	span.banner_title {
 		color:#fff;
@@ -327,6 +333,17 @@ span.sidebar_title {
 	
 	
 } /* Media Query */
+
+
+
+
+@media screen and (max-width: 360px) {} /* Media Query */
+
+
+span.sidebar_title {
+   
+    font-size: 37px;
+   }
 
 
 
