--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-three.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-three.scss
@@ -4,17 +4,40 @@
 
 
 .section_three_inner {
-	max-width:1470px;
+	max-width:1525px;
 	margin:0px auto;
-	padding:223px 0;
+	padding: 168px 0 134px;
 	width:100%;
 	position: relative;
+	text-align: center;
 	&:after {
 		content:"";
 		clear:both;
 		display: block;
 	}
 }
+
+
+a.view_pa {
+	background: $bluedark;
+	color:#fff;
+	text-transform: uppercase;
+	clear:both;
+	font-family: $gothicdemicondensed;
+	font-size:15.5px;
+	display: inline-block;
+
+	padding:28px 75px  23px;
+	letter-spacing: 3.5px;
+	transition: all .2s ease-in-out;
+	margin:60px auto 0;
+	text-decoration: none;
+	&:hover {
+		background: $bluelight;
+		color:#fff;
+	}
+}
+
 
 
 #section_three {
@@ -102,14 +125,20 @@ svg#brooklyn {
 
 
 .sec_three_content {
-	width:calc(100% - 405px);
-	float:right;
-	padding-left:16%;
-	padding-right:65px;
-	margin:90px 0 0;
+	width:100%;
+	text-align: left;
+	// float:right;
+	// padding-left:16%;
+	// padding-right:65px;
+	margin:0px 0 0;
+	&:after {
+		content:"";
+		clear:both;
+		display: block;
+	}
 	span.large_header {
-		font-size: 56px;
-		line-height: 56px;
+		font-size: 66px;
+		line-height: 61px;
 		font-family: $questrabold;
 		margin-bottom:60px;
 		display: block;
@@ -117,6 +146,30 @@ svg#brooklyn {
 	}
 	
 }
+
+
+
+
+
+.sec_three_col {
+	width:47.5%;
+	&:first-of-type {
+		float:left;
+	}
+	&:last-of-type {
+		float:right;
+	}
+	strong {
+		color:$bluelight;
+		text-transform: uppercase;
+		font-family: $gothicdemicondensed;
+		font-weight: 300;
+		font-style:none;
+		font-size:19px;
+		letter-spacing: 4px;
+	}
+}
+
 
 
 .sec_three_content.content {
@@ -147,7 +200,7 @@ svg#brooklyn {
 	
 	
 	.sec_three_content {
-		padding-left:8.5%;
+		//spadding-left:8.5%;
 		padding-right:0;
 		margin: 105px 0 0;
 	}
@@ -205,7 +258,7 @@ svg#brooklyn {
    
    
    .sec_three_content {
-	   padding-left: 2.5%;
+	  // padding-left: 2.5%;
 	   margin: -111px 0 0;
 	   span.large_header {
 		       margin-bottom: 51px;
@@ -238,11 +291,16 @@ svg#brooklyn {
 	
   
   .sec_three_content {
+/*
 	  width:100%;
 	  float:none;
+*/
 	  order:1;
 	  margin: -36px 0 0;
 	  padding-left:0;
+	  span.large_header {
+		  font-size: 56px;
+	  }
   }
   
   .sec_three_sidebar {
@@ -295,8 +353,10 @@ svg#brooklyn {
   
   
   .section_three_inner {
+/*
 	  display: flex;
 	  flex-direction: column;
+*/
   }
 	
 	
@@ -309,6 +369,35 @@ svg#brooklyn {
   }
   
   }
+	
+	
+	
+} /* Media Query */
+
+
+
+@media screen and (max-width: 1060px) {
+	
+	
+	#section_three {
+		padding-left:45px;
+		padding-right:45px;
+	}
+	
+	.section_three_inner {
+    padding: 293px 0 95px;
+}
+	
+	
+	.sec_three_col {
+		width:100%;
+		&:first-of-type {
+			float:none;
+		}
+		&:last-of-type {
+			float:none;
+		}
+	}
 	
 	
 	
@@ -339,9 +428,9 @@ svg#brooklyn {
   }
   
   
-   .section_three_inner {
-    	padding: 206px 0 59px;
-		}
+  .section_three_inner {
+    padding: 219px 0 59px;
+}
 		
 		
 		.sec_three_sidebar {
@@ -388,8 +477,18 @@ svg#brooklyn {
 		font-size: 40px;
 		line-height: 46px;
 		margin-bottom: 30px;
+		br {
+			display: none;
+		}
 	}
 	
+}
+
+
+a.view_pa {
+	margin-top:10px;
+	padding: 28px 20px 23px;
+	letter-spacing: 3px;
 }
   
 	
