--- a/wp-content/themes/schlemmer/css/scss/_animations.scss
+++ b/wp-content/themes/schlemmer/css/scss/_animations.scss
@@ -1086,6 +1086,55 @@ svg#bridge {
 }
 
 
+// location section
+
+
+
+
+.address_image {
+	position: relative;
+	overflow: hidden;
+	&:before {
+		content:"";
+		position: absolute;
+		top:0;
+		left:0;
+		width:100%;
+		height:100%;
+		background: url(#{$themePath}images/footer-subway-img-desktop.jpg) top center no-repeat;
+		background-size: cover;
+		transform: scale(1.3,1.3);
+	}
+}
+
+#location_section.visible {
+	.address_image {
+		&:before {
+			animation-name: location_scale;
+			animation-duration: 2200ms;
+			animation-fill-mode: both;
+			animation-timing-function: cubic-bezier(.17,.66,.34,.98);
+			animation-delay: 0.5ms;
+		}
+	}
+}
+
+
+
+@keyframes location_scale {
+  from {
+    transform: scale(1.3,1.3);
+ 	}
+
+  to {
+   transform: scale(1,1);
+   }
+}
+
+
+
+
+
 } /* Media Query */
 
 
