--- a/wp-content/themes/schlemmer/css/scss/_page-about.scss
+++ b/wp-content/themes/schlemmer/css/scss/_page-about.scss
@@ -80,7 +80,9 @@ body.page-template-page-about {
 	clear:both;
 	padding:135px 0 160px;
 	text-align: center;
-	
+	max-width: 1555px;
+	margin-left:auto;
+	margin-right:auto;
 	.logo_slide {
 		display: inline-block;
 		margin:0 3.5%;
