--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-one.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-one.scss
@@ -34,6 +34,9 @@ a.logo {
 		font-size:160px;
 		line-height: 165px;
 		display: block;
+		span.third_line_height {
+			// margin-top:-20px;
+		}
 	}
 }
 
