--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-six.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-six.scss
@@ -138,6 +138,26 @@
 
 
 
+@media screen and (max-width: 1450px) {
+	
+	
+	.sec_six_content_wrapper {
+		span.att_name {
+			margin-left: 24px;
+		}
+	} 
+	
+	    
+	
+	
+	
+} /* Media Query */
+
+
+
+
+
+
 @media screen and (max-width: 1380px) {
 	
 	
