--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-two.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-two.scss
@@ -143,6 +143,21 @@
 
 
 
+@media screen and (max-width: 1450px) {
+	
+	#section_two {
+		padding: 0 0 102px 7%;
+	}
+	
+	.sec_three_content {
+    margin: 95px 0 0;
+}
+	
+	
+	
+} /* Media Query */
+
+
 
 @media screen and (max-width: 1380px) {
 	
