--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-four.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-four.scss
@@ -6,8 +6,10 @@
 
 .sec_four_left {
 	width:55%;
+/*
 	background: url(#{$themePath}images/test-ny-img-desktop.jpg) top center no-repeat;
 	background-size:cover;
+*/
 	height:1267px;
 	display: flex;
 	justify-content: center;
