--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-one.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-one.scss
@@ -7,8 +7,10 @@
 
 
 .section_left {
+/*
 	background: url(#{$themePath}images/hero-desktop.jpg) top center no-repeat;
 	background-size: cover;
+*/
 	width:calc(100% - 474px);
 	padding-bottom:200px;
 }
@@ -307,8 +309,10 @@ span.get_started_button {
 	
 	.section_left {
 		width:100%;
+/*
 		background: url(#{$themePath}images/hero-tablet.jpg) top center no-repeat;
 		background-size:cover;
+*/
 		min-height: 590px;
 		padding-bottom: 97px;
 	}
@@ -385,7 +389,7 @@ span.get_started_button {
 	
 	
 	.section_left {
-		background: url(#{$themePath}images/hero-mobile.jpg) top center no-repeat;
+		// background: url(#{$themePath}images/hero-mobile.jpg) top center no-repeat;
 	}
 	
 	
