--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-six.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-six.scss
@@ -51,7 +51,7 @@
 		max-width: 685px;
 		color:#fff;
 	}
-	span.att_name {
+	a.att_name {
 		color:$bluelight;
 		font-family:$gothicdemicondensed;
 		text-transform: uppercase;
@@ -142,7 +142,7 @@
 	
 	
 	.sec_six_content_wrapper {
-		span.att_name {
+		a.att_name {
 			margin-left: 24px;
 		}
 	} 
@@ -364,7 +364,7 @@
 		span.large_header {
 			margin-left: 65px;
 		}
-		span.att_name {
+		a.att_name {
 			margin-left: 41px;
 			padding-top: 0;
 			&:before {
@@ -418,7 +418,7 @@
 			font-size:45px;
 			line-height: 41px;
 		}
-		span.att_name {
+		a.att_name {
 			font-size:15px;
 			margin-left: 33px;
 		}
