--- a/wp-content/themes/schlemmer/css/scss/_footer.scss
+++ b/wp-content/themes/schlemmer/css/scss/_footer.scss
@@ -295,8 +295,10 @@ body:not(.page-template-page-home ) {
 
 .address_image {
 	width:45%;
+/*
 	background: url(#{$themePath}images/footer-subway-img-desktop.jpg) top left no-repeat;
 	background-size:cover;
+*/
 }
 
 body:not(.page-template-page-home ) {
