--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-six.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-six.scss
@@ -337,7 +337,7 @@
 	width:382px;
 	margin-top:245px;
 	margin-bottom:75px;
-	background: url(#{$themePath}images/new-tablet.jpg) top left no-repeat;
+// 	background: url(#{$themePath}images/new-tablet.jpg) top left no-repeat;
 }
 
 
