--- a/wp-content/themes/schlemmer/css/scss/_animations.scss
+++ b/wp-content/themes/schlemmer/css/scss/_animations.scss
@@ -945,8 +945,10 @@ svg#ny {
 		top:0;
 		left:0;
 		position: absolute;
+/*
 		background: url(#{$themePath}images/attorney-paul-schlemmer-desktop.jpg);
 		background-size: cover;
+*/
 		transform: scale(1.2, 1.2);
 	}
 }
@@ -1185,8 +1187,10 @@ body.page-template-page-home {
 		left:0;
 		width:100%;
 		height:100%;
+/*
 		background: url(#{$themePath}images/footer-subway-img-desktop.jpg) top center no-repeat;
 		background-size: cover;
+*/
 		transform: scale(1.3,1.3);
 	}
 }
