--- a/wp-content/themes/schlemmer/css/scss/_page-default.scss
+++ b/wp-content/themes/schlemmer/css/scss/_page-default.scss
@@ -28,6 +28,8 @@
 }
 
 
+
+/*
 .banner.one {
 	background: url(#{$themePath}images/int_header_1.jpg) top center no-repeat;
 	background-size: cover;
@@ -47,6 +49,8 @@
 	background: url(#{$themePath}images/int_header_4.jpg) top center no-repeat;
 	background-size: cover;
 }
+*/
+
 
 
 
